--- a/config/database.yml
+++ b/config/database.yml
@@ -27,6 +27,9 @@ development:
   <<: *default
   database: blint_development
 
+staging:
+  <<: *default
+  database: blint_staging
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
