--- a/config/database.yml
+++ b/config/database.yml
@@ -30,6 +30,8 @@ development:
 staging:
   <<: *default
   database: blint_staging
+  username: postgres
+  password: postgres
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
