--- a/config/database.yml
+++ b/config/database.yml
@@ -32,6 +32,7 @@ staging:
   database: blint_staging
   username: postgres
   password: postgres
+  host: localhost
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
